--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     height: 50px;
+    
 
 }
 
@@ -85,4 +86,26 @@ body {
 
 .nav-menu li:hover{
     text-decoration: 1.5px underline black;
+    cursor: pointer;
+}
+
+/*News section---------*/
+.news-container {
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    width: 90%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.news-section {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.news-container img {
+    width: 100%;
+    height: 350px;
 }
