--- a/styles.css
+++ b/styles.css
@@ -92,20 +92,97 @@ body {
 /*News section---------*/
 .news-container {
     display: flex;
-    justify-content: space-between;
     margin: auto;
     width: 90%;
     padding-top: 20px;
+}
+
+.news-left-section {
+    margin: auto;
+    width: 70%;
+
+}
+
+/* .newsmain-section {
+    display: flex;
+    justify-content: space-between;
+    border-right: 1px solid #c6c6c6;
+    flex-wrap: wrap;
+} */
+
+.news-card, .news-card1 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-bottom: 1px solid #c6c6c6;
     padding-bottom: 20px;
 }
 
+.news-card {
+    padding-top: 20px;
+}
+
 .news-section {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 25px;
+    height: 300px;
+    width: 47%;
+    padding-right: 20px;
+    
 }
 
 .news-container img {
     width: 100%;
-    height: 350px;
+    height: 320px;
+    padding-right: 20px;
 }
+
+/*News right section-------------*/
+
+.news-right-section {
+    padding-left: 20px;
+    padding-bottom: 20px;
+    width: 30%;
+    border-left: 1px solid #c6c6c6;
+}
+
+.nrs-simple {
+    height: 150px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #c6c6c6;
+}
+.nrs-img img{
+    width: 80%;
+    height: 200px;
+}
+
+.nrs-img {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #c6c6c6;
+
+}
+
+.nrs-double {
+    width: 100%;
+    height: 150px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    border-bottom: 1px solid #c6c6c6;
+
+
+}
+
+.nrs-double div {
+    padding: 10px;
+}
+
+.nrs-double div:first-child{
+    border-right: 1px solid #c6c6c6;
+}
+
+
+
+
+
