--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,16 @@
     --dimgrey-color: rgb(105,105,105);
     --maintitle-font: "UnifrakturMaguntia", cursive;
     --newstitle1-font: "Playfair Display", serif;
+    --newstitle2-font: "DM Serif Display", serif;
+    --newsparraph-font: "Barlow Condensed", sans-serif;
+    --newspargraph-font1: "PT Serif", serif, normal;
+    --newstitle3-font: "Cormorant Garamond", serif;
+
+}
+
+@font-face {
+    font-family: 'Logotitle';
+    src: url('./library/Chomsky.woff');
 }
 
 * {
@@ -26,8 +36,9 @@ body {
 }
 
 .title-container h1{
-    font-family: var(--maintitle-font);
-    font-size:62px;
+    font-family: LogoTitle;
+    font-size:70px;
+    font-weight:normal;
 }
 /* .title-container span {
     padding-right: 40px;
@@ -38,9 +49,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 7px, 8px, 6px;
+    padding-right: 30px;
     height: 50px;
-    
+    width: 90%;
+    margin: auto;
     
 }
 
@@ -69,12 +81,19 @@ body {
 }
 
 .nav-menu {
+    font-family: var(--newstitle1-font);
     list-style-type: none;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 50px;
-    
+}
+
+.divider {
+    border-right: 1px solid #c6c6c6;
+    border-left: 1px solid #f2f2f2;
+    height: 20px; /* Ajusta la altura según tus necesidades */
+
 
 }
 
@@ -129,7 +148,24 @@ body {
     height: 300px;
     width: 47%;
     padding-right: 20px;
-    
+}
+
+.news-section h3 {
+    font-family: var(--newstitle1-font);
+    font-size:x-large;
+    font-weight: 600;
+    padding-bottom: 10px;
+}
+
+.news-section p {
+    font-family: var(--newspargraph-font1);
+    font-size: normal;
+    color: rgb(108, 108, 108);
+}
+
+.news-section div:first-child {
+    border-bottom: 1px solid #c6c6c6;
+    padding-bottom: 20px;
 }
 
 .news-container img {
@@ -152,6 +188,20 @@ body {
     padding-bottom: 20px;
     border-bottom: 1px solid #c6c6c6;
 }
+
+.nrs-simple h3 {
+    font-family: var(--newspargraph-font1);
+    font-size:x-large;
+    font-weight:500;
+    padding-bottom: 10px;
+}
+
+.nrs-simple p {
+    font-family: var(--newspargraph-font1);
+    font-size:15px;
+    color: rgb(108, 108, 108);
+}
+
 .nrs-img img{
     width: 80%;
     height: 200px;
@@ -161,7 +211,20 @@ body {
     padding-top: 20px;
     padding-bottom: 20px;
     border-bottom: 1px solid #c6c6c6;
+}
 
+.nrs-img h3 {
+    font-family: var(--newstitle3-font);
+    font-size:xx-large;
+    font-style: italic;
+    font-weight:500;
+    padding-bottom: 10px;
+}
+
+.nrs-img p {
+    font-family: var(--newspargraph-font1);
+    font-size:14px;
+    color: rgb(108, 108, 108);
 }
 
 .nrs-double {
@@ -170,8 +233,19 @@ body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     border-bottom: 1px solid #c6c6c6;
+}
 
+.nrs-double h3 {
+    font-family: var(--newstitle3-font);
+    font-size:x-large;
+    font-weight:500;
+    padding-bottom: 10px;
+}
 
+.nrs-double p {
+    font-family: var(--newspargraph-font1);
+    font-size:14px;
+    color: rgb(108, 108, 108);
 }
 
 .nrs-double div {
